UHF-2976: Fix unit teaser image size on mobile

--- a/src/scss/06_components/pages/_unit.scss
+++ b/src/scss/06_components/pages/_unit.scss
@@ -255,6 +255,7 @@
     }
 
     img {
+      @include image-defaults($width: 100%, $max-width: null);
       @include breakpoint($breakpoint-m) {
         @include image-defaults($height: 100%, $width: 100%, $max-width: null);
         object-fit: cover;
